Solution updated